--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run watch:dev\" \"npm run build:dev\"",
-    "watch:dev": "webpack-dev-server --inline --hot --history-api-fallback",
-    "build:dev": "webpack --watch",
+    "watch:dev": "webpack-dev-server --inline --hot --history-api-fallback --config ./webpack/webpack.config.js",
+    "build:dev": "webpack --watch --config ./webpack/webpack.config.js",
     "start": "node index.js",
-    "build:prod": "webpack -p",
+    "build:prod": "webpack -p --config ./webpack/webpack.config.js",
     "heroku-postbuild": "npm run build:prod",
     "lint:fix": "standard --env mocha --fix",
     "test": "mocha-webpack test --recursive --require test/.setup.js"
