--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
     "autoprefixer": "^6.7.3",
     "axios": "^0.12.0",
     "babel-core": "^6.10.4",
