--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run watch:dev\" \"npm run build:dev\"",
-    "watch:dev": "webpack-dev-server --inline --hot --history-api-fallback --config ./webpack/webpack.config.js",
-    "build:dev": "webpack --watch --config ./webpack/webpack.config.js",
+    "watch:dev": "webpack-dev-server --inline --hot --history-api-fallback --config ./webpack/webpack.dev.js",
+    "build:dev": "webpack --watch --config ./webpack/webpack.dev.js",
     "start": "webpack-dev-server --open --config ./webpack/webpack.config.js --port 80",
-    "build:prod": "webpack -p --config ./webpack/webpack.config.js",
-    "heroku-postbuild": "npm run build:prod",
+    "build:prod": "webpack --config ./webpack/webpack.prod.js",
     "lint:fix": "standard --env mocha --fix",
     "test": "mocha-webpack test --recursive --require test/.setup.js"
   },
@@ -51,7 +50,6 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
     "autoprefixer": "^6.7.3",
     "axios": "^0.12.0",
     "babel-core": "^6.10.4",
@@ -59,6 +57,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-runtime": "^6.9.2",
+    "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.2.1",
     "jquery": "2.2.4",
