--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "concurrently \"npm run watch:dev\" \"npm run build:dev\"",
     "watch:dev": "webpack-dev-server --inline --hot --history-api-fallback --config ./webpack/webpack.dev.js",
     "build:dev": "webpack --watch --config ./webpack/webpack.dev.js",
-    "start": "webpack-dev-server --open --config ./webpack/webpack.config.js --port 80",
     "build:prod": "webpack --config ./webpack/webpack.prod.js",
     "lint:fix": "standard --env mocha --fix",
-    "test": "mocha-webpack test --webpack-config webpack/webpack.dev.js --recursive --require test/.setup.js"
+    "test": "mocha-webpack test --webpack-config webpack/webpack.dev.js --recursive --require test/.setup.js",
+    "heroku-postbuild": "npm run build:prod",
+    "start": "node index.js"
   },
   "engines": {
     "node": "~6.0.0",
